# sentinel-linux

./: LICENSE  Makefile  README.md  install.sh  prescient.toml  pyproject.toml  sentinel.toml
docs/: diagnose.md  heal.md  predict.md  undo.md  uninstall.md  update.md
src/prescient/: cli.py  config.py
src/prescient/core/: cache.py  hooks.py  logger.py  mirror_checker.py  update_checker.py  utils.py
src/prescient/initramfs/: prescient-arch-hook  prescient-rescue.sh  prescient-ubuntu-hook
src/prescient/intelligence/: autoheal.py  diagnose.py  heuristic.py  network.py
src/prescient/recovery/: snapshot.py  undo.py
src/prescient/tui/: app.py  widgets.py
src/prescient/vanguard/: boot.py  security.py  system.py
src/sentinel/: cli.py  config.py  hooks.py
src/sentinel/core/: cache.py  hooks.py  logger.py
src/sentinel/engine/: boot.py  cache.py  diagnose.py  security.py  system.py
src/sentinel/intelligence/: autoheal.py  diagnose.py  heuristic.py
src/sentinel/recovery/: snapshot.py  undo.py
src/sentinel/vanguard/: boot.py  security.py  system.py
