[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prescient-linux"
version = "0.12.5"
description = "Predict. Protect. Recover. An intelligent CLI stability layer for Linux."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GurKalra", email = "85062798+GurKalra@users.noreply.github.com"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomlkit>=0.12.0",
    "textual>=0.52.0"
]

[project.scripts]
prescient = "prescient.cli:app"